# SPDX-License-Identifier: Apache-2.0.
# Copyright (C) 2026-present tsilna-nav project and contributors.

# Project package info section.
[package]
name        = "tsilna-protocol"
version     = "0.1.0"
description = "Binary protocols and utilities for autonomous navigation systems"
authors     = ["Alexander <alkuzindev@gmail.com>"]
repository  = "https://github.com/alkuzin/tsilna/tsilna-protocol"
license     = "Apache-2.0"
edition     = "2024"

# Project dependencies section.
[dependencies]
# Inertial Measurement Unit Data Transfer Protocol (IDTP) - network protocol
# used for transferring IMU data.
idtp = { git = "https://github.com/alkuzin/idtp", version = "2.0.0" }
# Rust implementation of CRC.
crc = "3.4"
